# privacyfence

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  Loopline.spec  NOTICE  PROPOSAL-knowledge-boundary-gaps.md  PrivacyFence.spec  PrivacyFenceApp.spec  PrivacyFenceBridge.spec  README.md  com.loopline.app.plist  com.privacyfence.app.plist  pyproject.toml
.github/workflows/: build.yml  tests.yml
bridge/: build.mjs  package-lock.json  package.json  tsconfig.json
bridge/src/: daemon.ts  errors.ts  index.ts  ipcClient.ts  manifest.ts  protocol.ts  tools.ts
bridge/test/: daemon.test.ts  index.test.ts  ipcClient.test.ts  manifest.test.ts  protocol.test.ts  testDaemon.ts  tools.test.ts
config/: settings.yaml.example
docs/: TECHNICAL_REFERENCE.md  always-allow-rules-reference.md  approval-window-content-reference.md  atlassian-setup.md  claude-knowledge-boundary.md  coding-and-testing-guidelines.md  connector-qa-testing.md  cowork-scheduled-tasks-design.md  dev-vs-live-setup.md  external-api-contract-testing.md  gate-popup-audit-testing.md  google-cloud-setup.md  pii-detection-keywords.md  popup-formatting-catalog.md  qa-environment-setup.md  salesforce-setup.md  security-and-compliance.md  security-review-ui-redesign.md  slack-setup.md  telegram-setup.md  testing-policy.md
docs/design/: sheets-docs-tool-improvements.md
docs/designs/: auto-accept-grants-redesign.md
docs/images/screenshots/: README.md
mcpb/: manifest.json.tmpl
scripts/: Fix Launch Issue.command  build_dmg.sh  build_mcpb.sh  build_org_bundle.py  dev_start.sh  entitlements.plist  qa_fixture_recorder.py  qa_list_ids.py  qa_popup_smoke.py  sync_room_directory.py
src/: _bridge_entry.py  _daemon_entry.py
src/loopline/: __init__.py  approval_popup.py  audit_log.py  auto_accept.py  bridge_main.py  calendar_client.py  connector.py  contacts_client.py  daemon_main.py  drive_client.py  drive_main.py  drive_mcp_server.py  floating_window.py  gate.py  gmail_client.py  ipc.py  ipc_client.py  ipc_server.py  main.py  mcp_server.py  menu_bar.py  paths.py  pending_reads.py  review_queue.py  setup_wizard.py  slack_client.py  slack_mcp_server.py  tasks_client.py  telegram_client.py
src/loopline/connectors/: __init__.py  calendar.py  confluence.py  contacts.py  drive.py  gmail.py  jira.py  salesforce.py  slack.py  tasks.py  telegram.py
src/privacyfence/: __init__.py  app_credentials.py  approval_popup.py  approval_window.py  atlassian_oauth.py  audit_log.py  auto_accept.py  bridge_main.py  calendar_client.py  confluence_client.py  connector.py  contacts_client.py  daemon_main.py  drive_client.py  gate.py  gmail_client.py  html_to_text.py  ipc.py  ipc_client.py  ipc_server.py  jira_client.py  menu_bar.py  oauth_loopback.py  paths.py  pii_detector.py  privacy_filter.py  resource_grants.py  resource_names.py  room_directory_client.py  rules_manager_window.py  salesforce_client.py  setup_wizard.py  slack_client.py  tasks_client.py  telegram_client.py
src/privacyfence/connectors/: __init__.py  calendar.py  confluence.py  contacts.py  drive.py  gmail.py  jira.py  salesforce.py  slack.py  tasks.py  telegram.py
src/privacyfence/resources/: settings.yaml.example
src/privacyfence/resources/connector_icons/: README.md
tests/: conftest.py  helpers.py
tests/fixtures/: qa_environment.yaml  qa_environment.yaml.example
tests/fixtures/live/: README.md
tests/fixtures/live/calendar/: get_event.json
tests/fixtures/live/confluence/: get_page.json  list_spaces.json
tests/fixtures/live/contacts/: get_contact.json
tests/fixtures/live/drive/: get_file_metadata.json
tests/fixtures/live/gmail/: get_message.json
tests/integration/: __init__.py  test_bridge_daemon_contract.py
tests/unit/: test_app_credentials.py  test_approval_popup.py  test_approval_popup_escaping.py  test_approval_window.py  test_atlassian_oauth.py  test_audit_log.py  test_auto_accept.py  test_bridge_main.py  test_calendar_client.py  test_confluence_client.py  test_connector.py  test_contacts_client.py  test_daemon_main.py  test_drive_client.py  test_gate.py  test_gate_real_evaluator.py  test_gmail_client.py  test_html_to_text.py  test_ipc_client.py  test_ipc_server.py  test_jira_client.py  test_menu_bar.py  test_oauth_loopback.py  test_paths.py  test_pii_detector.py  test_privacy_filter.py  test_qa_fixture_recorder.py  test_resource_grants.py  test_resource_names.py  test_room_directory_client.py  test_rules_manager_window.py  test_salesforce_client.py  test_slack_client.py  test_tasks_client.py  test_telegram_client.py
tests/unit/connectors/: test_calendar_connector.py  test_confluence_connector.py  test_contacts_connector.py  test_drive_connector.py  test_gmail_connector.py  test_jira_connector.py  test_readme_manifest_alignment.py  test_salesforce_connector.py  test_slack_connector.py  test_tasks_connector.py  test_telegram_connector.py
(+7 files in other folders)
