[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyfence"
version = "0.4.5"
description = "macOS menu bar privacy proxy between Claude (MCP) and your personal data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Andras Takacs", email = "privacyfence@tkcs.name" }]
dependencies = [
    "fastmcp>=2.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "slack-sdk>=3.27.0",
    "telethon>=1.36.0",
    "atlassian-python-api>=3.41.0",
    "simple-salesforce>=1.12.0",
    "requests>=2.31.0",
    "certifi>=2024.2.2",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.scripts]
privacyfence-bridge = "privacyfence.bridge_main:main"
privacyfence-app    = "privacyfence.daemon_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
privacyfence = ["resources/*.png", "resources/settings.yaml.example"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]
