[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyfence"
version = "2.0.0-dev"
description = "macOS menu bar privacy proxy between Claude (MCP) and your personal data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Andras Takacs", email = "privacyfence@tkcs.name" }]
dependencies = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "slack-sdk>=3.27.0",
    "telethon>=1.36.0",
    "atlassian-python-api>=3.41.0",
    "simple-salesforce>=1.12.0",
    "requests>=2.31.0",
    "certifi>=2024.2.2",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-WebKit>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
privacyfence-app = "privacyfence.daemon_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
privacyfence = [
    "resources/*.png",
    "resources/settings.yaml.example",
    "resources/connector_icons/*.png",
    "resources/connector_icons/README.md",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    # Official MCP Python client -- test-only, used solely by
    # tests/integration/test_bridge_daemon_contract.py to drive the real
    # Node bridge over real MCP-over-stdio. Never shipped in the daemon or
    # the bridge (see docs on dropping fastmcp/mcp from the MCP side).
    "mcp>=1.0.0",
    "freezegun>=1.5",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# A hung asyncio socket test (e.g. a fixture never closing a connection)
# would otherwise block the whole suite indefinitely instead of failing.
timeout = 30
